-- 2024. 04. 06 - v1.2.0

- feat: Created SteamService model
- optimise: Full plugin refactoring

-- 2024. 02. 14 - v1.1.3

- fix: Server lag on player connect
- fix: Checking restrictions for bots

-- 2023. 10. 10 - v1.1.0

- Added option to filter Trade banned players
- Added option to filter Game banned players